--- a/delivery1/public/index.html
+++ b/delivery1/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="modal"></div>
     <div id="root">
     </div>
     <!--
